# clean-history

./: Cargo.toml  LICENSE  PKGBUILD  PKGBUILD-bin  README.md
.github/scripts/: update-aur.sh
.github/workflows/: release.yml  update-pkgbuild.yml
src/: history.rs  main.rs  shell.rs
