[package]
name = "clean-history"
version = "0.1.0"
edition = "2021"
authors = ["ALIBI Ghazi <123127137+GhaziAlibi@users.noreply.github.com>"]
description = "Clean multiline entries from shell history files"
license = "MIT"
repository = "https://github.com/GhaziAlibi/clean-history"
keywords = ["shell", "history", "cleanup", "bash", "zsh"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
